Implement front end vue: 70% completion

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,9 @@
-// Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
 // Variables
 @import 'variables';
+
+// scss files
+@import "loading";
+@import "custom";
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
